@@ -8,6 +8,7 @@
       
       [After]
       method shutdown : void ($how : int);
+    * IO::Socket#close method throw an excetpion if the socket is not opened.
       
 0.216 2023-05-29
   [Requirement Changes]
